More changes to the old-Webkit bug-fix, to fix issues with old Android on tablets.

--- a/src/toggle-switch.scss
+++ b/src/toggle-switch.scss
@@ -453,7 +453,7 @@
  */
 .switch-light,
 .switch-toggle {
-	@media only screen and (-webkit-max-device-pixel-ratio: 2) and (max-device-width: 800px) {
+	@media only screen and (-webkit-max-device-pixel-ratio: 2) and (max-device-width: 1280px) {
 		-webkit-animation: webkitSiblingBugfix infinite 1s;
 	}
 }
